cluster/core/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Traefik"
    forecastle.stakater.com/icon: "https://github.com/NX211/homer-icons/raw/master/png/traefik.png"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.entrypoints: "external"
    traefik.ingress.kubernetes.io/router.middlewares: networking-protected@kubernetescrd
spec:
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
